@@ -1,5 +1,13 @@
 2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03383] Select the nearest map area as default.
+	* fm.h (MapArea): add center_x, center_y
+	* map.c (nearestMapArea): added
+		(follow_map_menu): initial by nearestMapArea()
+		(newMapArea): set center_x, center_y
+
+2002-11-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03382] Interrupt in no_proxy_check()
 	* url.c (check_no_proxy): SIGINT trap by KeyAbort
 
